--- a/index.css
+++ b/index.css
@@ -1,6 +1,3 @@
-*{
-    outline: solid red;
-}
 
 html{
     width:100%;
@@ -23,4 +20,24 @@ body{
 
 button{
     width:200px;
+    margin-top: 10px;
+}
+
+.type{
+    border: solid black 1px;
+    border-radius: 5%;
+}
+
+div{
+    width:10%;
+    height: 10%;
+    *{
+        margin:5px;
+    }
+}
+
+#output{
+    min-height: 100px;
+    min-width: 300px;
+    border:solid black;
 }
